...
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingVertical="20dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingVertical="20dp"
...
